WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188909
initKeyboardEvent doesn't clear CapsLock state
https://bugs.webkit.org/show_bug.cgi?id=188909
Summary
initKeyboardEvent doesn't clear CapsLock state
Ryosuke Niwa
Reported
2018-08-23 17:00:12 PDT
We should clear the caps lock state in initKeyboardEvent to match behaviors of Firefox & Chrome. Spec bug:
https://github.com/w3c/uievents/issues/209
Attachments
Fixes the bug
(7.12 KB, patch)
2018-08-23 17:02 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-08-23 17:02:47 PDT
Created
attachment 347974
[details]
Fixes the bug
Wenson Hsieh
Comment 2
2018-08-23 17:08:38 PDT
Comment on
attachment 347974
[details]
Fixes the bug r=mews
Ryosuke Niwa
Comment 3
2018-08-23 19:01:30 PDT
Comment on
attachment 347974
[details]
Fixes the bug Clearing flags on attachment: 347974 Committed
r235268
: <
https://trac.webkit.org/changeset/235268
>
Ryosuke Niwa
Comment 4
2018-08-23 19:01:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-08-23 19:03:25 PDT
<
rdar://problem/43668541
>
Lucas Forschler
Comment 6
2019-02-06 09:18:24 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug