initKeyboardEvent doesn't clear CapsLock state https://bugs.webkit.org/show_bug.cgi?id=188909

Reviewed by Wenson Hsieh.

Source/WebCore:

Fixed the bug by not preserving CapsLock state in setModifierKeys variant which takes boolean
for altGraphKey, which is only called by KeyboardEvent::initKeyboardEvent.

Test: fast/events/init-event-clears-capslock.html

* dom/UIEventWithKeyState.h:
(WebCore::UIEventWithKeyState::setModifierKeys):

LayoutTests:

Added a regression test. Note that altGraph is only supported in WebKit
so Chrome and Firefox would fail to reset it via initKeyboardEvent.

* fast/events/init-event-clears-capslock-expected.txt: Added.
* fast/events/init-event-clears-capslock.html: Added.


Canonical link: https://commits.webkit.org/203969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235268 268f45cc-cd09-0410-ab3c-d52691b4dbfc